[package]
name = "dx-rs"
version = "0.1.0"
authors = ["immortal infidel <immortal.infidel@gmail.com>"]
edition = "2018"
license="MIT"
description=" Directional Movement Index (DX) ,Average Directional Movement Index (ADX)  and Average Directional Movement Rating (ADXR) implementaion In Rust"
repository="https://github.com/immortalinfidel/dx-rs"
homepage="https://github.com/immortalinfidel/dx-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ta-common = { path = "../ta-common", version = "0.1.0" }
tr-rs = { path = "../tr-rs", version = "0.1.0" }
